Fixed form mode visibility

--- a/src/app/startsurvey/startsurvey.page.scss
+++ b/src/app/startsurvey/startsurvey.page.scss
@@ -117,6 +117,10 @@ ion-content {
   padding: 0 4px;
 }
 
+.detailsformviewcontainer{
+  height: 77vh;
+}
+
 .mainbuttonscontainer {
   width: 100vw;
   height: 8vh;
